vlib/v/checker/tests/assign_expr_undefined_err_h.vv
fn f(i int) int {
	return i
}

fn main() {
	n := f(n)
	println(n)
}
